--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,16 @@ section{
     background-color: #353B40;
     border-radius: 5px;
     padding: 50px;
+    margin: 50px;
+    box-shadow: 0 7px rgb(37, 37, 37);
 
 }
 .input1{
     border-radius: 5px;
     color: black;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0 5px;
 }
 
 h2{
@@ -18,6 +23,8 @@ h2{
     justify-content: center;
     display: flex;
     padding-top: 10px;
+    font-size: 50px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .btn{
