--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,5 @@
-body {
-    background-image: linear-gradient(45deg, #8baaaa 0%, #ae8b9c 100%);
-}
-
 section{
-    background-color: #4c545a;
+    background-color: #353B40;
     border-radius: 5px;
     padding: 50px;
 
@@ -66,13 +62,13 @@ h2{
 }
 
 .supr-btn, .check-btn, .modifTache{
-    background-color: rgb(155, 27, 23);
+    background-color: tomato;
     color: white;
     border: none;
     margin-right: 1px;
 }
 .check-btn{
-    background-color: rgb(30, 55, 167);
+    background-color: rgb(64, 64, 240);
     border-right: 1px black solid;
 }
 .modifTache{
@@ -83,7 +79,7 @@ h2{
     pointer-events: none;
 }
 .done{
-    background-color: rgb(23, 23, 175);
+    background-color: blue;
     color: white;
 }
 
